--- a/index.ejs
+++ b/index.ejs
@@ -7,6 +7,24 @@
       name="viewport"
       content="initial-scale=1,maximum-scale=1,user-scalable=no"
     />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="assets/favicon/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="assets/favicon/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="assets/favicon/favicon-16x16.png"
+    />
+    <link rel="manifest" href="assets/favicon/site.webmanifest" />
     <script src="https://api.mapbox.com/mapbox-gl-js/v2.0.0/mapbox-gl.js"></script>
     <script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU&amp;apikey=<%= yandexMapKey %>"></script>
     <link
@@ -24,21 +42,30 @@
         functions: {},
         dumpLineNumbers: "comments",
         relativeUrls: false,
-        rootpath: ":/a.com/"
+        rootpath: ":/a.com/",
       };
     </script>
     <script src="/libs/less.min.js" type="text/javascript"></script>
-    <link rel="stylesheet" href="/styles/map.css" />
     <script>
-      window.mapBoxKey = '<%= mapBoxKey %>'
-      window.mapnnUrl = '<%= mapnnUrl %>'
+      window.mapBoxKey = "<%= mapBoxKey %>";
+      window.mapnnUrl = "<%= mapnnUrl %>";
     </script>
   </head>
   <body>
-    <div id="map" class="map"></div>
-    <div id="ymap" class="map"></div>
-    <div id="placemarks"></div>
-    <div id="slider" class="map-overlay"></div>
+    <div class="header">
+      <img src="assets/logo.png" />
+      <div class="title">Старые карты Нижегородской губернии</div>
+    </div>
+
+    <div class="main">
+      <div id="placemarks" class="side-bar"></div>
+      <div class="map-container">
+        <div id="map" class="map"></div>
+        <div id="ymap" class="map"></div>
+        <!-- <div id="placemarks"></div> -->
+        <div id="slider" class="map-overlay"></div>
+      </div>
+    </div>
     <script type="module" src="/map.js"></script>
   </body>
 </html>
