--- a/public/styles/main.less
+++ b/public/styles/main.less
@@ -1,2 +1,26 @@
 @import "./placemark.less";
 @import "./map.less";
+@import "./header.less";
+
+body {
+  margin: 0;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+}
+
+.main {
+    display: flex;
+    flex: 1;
+//   height: 100%;
+
+  .side-bar{
+    // width: 200px;
+    
+  }
+  .map-container{
+    position: relative;
+    flex: 1;
+  }
+}
