--- a/public/styles/main.less
+++ b/public/styles/main.less
@@ -13,11 +13,12 @@ body {
 .main {
     display: flex;
     flex: 1;
+    overflow: hidden;
 //   height: 100%;
 
   .side-bar{
     // width: 200px;
-    
+
   }
   .map-container{
     position: relative;
