add copy button

--- a/public/styles/main.less
+++ b/public/styles/main.less
@@ -24,4 +24,22 @@ body {
     position: relative;
     flex: 1;
   }
+
+  .icon-button {
+    border: none;
+    background: transparent;
+    padding: 0;
+    width: 24px;
+    margin: 0 1px;
+
+    &:focus {
+      outline: none;
+    }
+    &:hover {
+      background: cornflowerblue;
+    }
+  }
+  .row{
+    display: flex;
+  }
 }
